@@ -34,6 +34,8 @@ CPAN releases are branched from 'master'.
     * Issue #81: Small updates to make sure possible memory leaks are detected [cjfields]
     * Issue #84: EMBL format wrapping problem [nyamned]
     * Issue #90: Missing entries for translation tables 24 and 25 [fjossandon]
+    * Issue #95: Speed up of Bio::DB::Fasta::subseq by using a compiled regex
+      or compiled C code (when Inline::C is installed) [rocky]
     * Fix various Bio::Tools::Analysis remote server config problems [cjfields]
     * Added several missing 'Data::Stag' and 'LWP::UserAgent' requirements [fjossandon]
     * Added a workaround in Bio::DB::Registry to get Username in Windows [fjossandon]
